Fix nav flickering around responsive breakpoint, ref: DEV-1032

--- a/assets/src/sass/layout/_site-header.scss
+++ b/assets/src/sass/layout/_site-header.scss
@@ -5,7 +5,7 @@
 .site-header {
   background-color: var(--wp--preset--color--white);
 
-  @media screen and (max-width: $breakpoint-nav) {
+  @media screen and (max-width: ($breakpoint-nav - 1px)) {
     background-color: var(--color-background-nav-mobile-header);
   }
 }
@@ -30,7 +30,7 @@
   position: relative;
   z-index: 15;
 
-  @media screen and (max-width: $breakpoint-nav) {
+  @media screen and (max-width: ($breakpoint-nav - 1px)) {
     padding-bottom: 0;
     padding-top: 1.25rem;
   }
